--- a/graph_database/graph_2_4_GroupK_HasPeak.ipynb
+++ b/graph_database/graph_2_4_GroupK_HasPeak.ipynb
@@ -33,7 +33,8 @@
     "import pandas as pd\n",
     "from scipy.signal import find_peaks\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os"
    ]
   },
   {
@@ -42,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neo4j_path = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss'\n",
-    "neo4j_dbms = 'dbms-d0a05d27-d2ec-404f-a7c3-e7f4b6a97351'"
+    "password = os.getenv('NEO4J_Password')\n",
+    "neo4j_directory = os.getenv('NEO4J_Directory')"
    ]
   },
   {
@@ -958,7 +959,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_format_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/relationships.csv\", index=False)"
+    "long_format_df.to_csv(f\"{neo4j_directory}}/import/relationships.csv\", index=False)"
    ]
   },
   {
@@ -987,7 +988,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/spectra.csv\", index=False)"
+    "spectra_df.to_csv(f\"{neo4j_directory}/import/spectra.csv\", index=False)"
    ]
   },
   {
@@ -1016,7 +1017,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "peak_range_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/peakrange.csv\", index=False)"
+    "peak_range_df.to_csv(f\"{neo4j_directory}/import/peakrange.csv\", index=False)"
    ]
   },
   {
@@ -1211,11 +1212,11 @@
     "os_name = os.name\n",
     "\n",
     "if os_name == 'nt':\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}/bin'\n",
+    "    working_dir = f'{neo4j_directory}/bin'\n",
     "    command = 'neo4j-admin database import full --nodes=import/spectra.csv --nodes=import/peakrange.csv --relationships=import/relationships.csv --overwrite-destination neo4j'\n",
     "    result = subprocess.run(command, shell=True, cwd=working_dir, capture_output=True, text=True)\n",
     "else:\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}'\n",
+    "    working_dir = f'{neo4j_directory}'\n",
     "    command = [\n",
     "    './bin/neo4j-admin', 'database', 'import', 'full',\n",
     "    '--nodes=import/spectra.csv', '--nodes=import/peakrange.csv',\n",
@@ -1251,8 +1252,7 @@
     "\n",
     "uri = \"neo4j://localhost:7687\"\n",
     "username = \"neo4j\"              # Neo4J username\n",
-    "#password = os.environ['NEO4J_Password']           # Neo4J password\n",
-    "password = '26622002'\n",
+    "#Password defined at the top of the notebook\n",
     "\n",
     "# Create a driver instance\n",
     "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
