--- a/graph_database/graph_1_6_Spectra_With_Similar_Peaks.ipynb
+++ b/graph_database/graph_1_6_Spectra_With_Similar_Peaks.ipynb
@@ -30,7 +30,8 @@
     "from scipy.signal import peak_prominences\n",
     "from scipy.integrate import simps\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold"
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "import os"
    ]
   },
   {
@@ -39,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neo4j_path = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss'\n",
-    "neo4j_dbms = 'dbms-d0a05d27-d2ec-404f-a7c3-e7f4b6a97351'"
+    "password = os.getenv('NEO4J_Password')\n",
+    "neo4j_directory = os.getenv('NEO4J_Directory')"
    ]
   },
   {
@@ -850,7 +851,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relationship_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/relationships.csv\", index=False)"
+    "relationship_df.to_csv(f\"{neo4j_directory}/import/relationships.csv\", index=False)"
    ]
   },
   {
@@ -879,7 +880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")"
+    "node_df.to_csv(f\"{neo4j_directory}/import/nodes.csv\")"
    ]
   },
   {
@@ -1197,11 +1198,11 @@
     "os_name = os.name\n",
     "\n",
     "if os_name == 'nt':\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}/bin'\n",
+    "    working_dir = f'{neo4j_directory}/bin'\n",
     "    command = 'neo4j-admin database import full --nodes=import/nodes.csv --relationships=import/relationships.csv --overwrite-destination neo4j'\n",
     "    result = subprocess.run(command, shell=True, cwd=working_dir, capture_output=True, text=True)\n",
     "else:\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}'\n",
+    "    working_dir = f'{neo4j_directory}'\n",
     "    command = [\n",
     "    './bin/neo4j-admin', 'database', 'import', 'full',\n",
     "    '--nodes=import/nodes.csv',\n",
@@ -1238,7 +1239,7 @@
     "uri = \"neo4j://localhost:7687\"\n",
     "username = \"neo4j\"              # Neo4J username\n",
     "#password = os.environ['NEO4J_Password']           # Neo4J password\n",
-    "password = '26622002'\n",
+    "#Password defined at the top of the notebook\n",
     "\n",
     "# Create a driver instance\n",
     "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
@@ -2127,7 +2128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status_df = pd.read_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")"
+    "status_df = pd.read_csv(f\"{neo4j_directory}/import/nodes.csv\")"
    ]
   },
   {
