--- a/graph_database/graph_2_0_Gaussian_Kernel_TrainTest.ipynb
+++ b/graph_database/graph_2_0_Gaussian_Kernel_TrainTest.ipynb
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial.distance import pdist, squareform\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -21,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neo4j_path = 'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss'\n",
-    "neo4j_dbms = 'dbms-d0a05d27-d2ec-404f-a7c3-e7f4b6a97351'"
+    "password = os.getenv('NEO4J_Password')\n",
+    "neo4j_directory = os.getenv('NEO4J_Directory')"
    ]
   },
   {
@@ -823,7 +824,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_nodes_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")"
+    "train_nodes_df.to_csv(f\"{neo4j_directory}/import/nodes.csv\")"
    ]
   },
   {
@@ -854,7 +855,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_relationship_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/relationships.csv\")"
+    "train_relationship_df.to_csv(f\"{neo4j_directory}/import/relationships.csv\")"
    ]
   },
   {
@@ -1048,11 +1049,11 @@
     "os_name = os.name\n",
     "\n",
     "if os_name == 'nt':\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}/bin'\n",
+    "    working_dir = f'{neo4j_directory}/bin'\n",
     "    command = 'neo4j-admin database import full --nodes=import/nodes.csv --relationships=import/relationships.csv --overwrite-destination neo4j'\n",
     "    result = subprocess.run(command, shell=True, cwd=working_dir, capture_output=True, text=True)\n",
     "else:\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}'\n",
+    "    working_dir = f'{neo4j_directory}'\n",
     "    command = [\n",
     "    './bin/neo4j-admin', 'database', 'import', 'full',\n",
     "    '--nodes=import/nodes.csv',\n",
@@ -1088,8 +1089,7 @@
     "\n",
     "uri = \"neo4j://localhost:7687\"\n",
     "username = \"neo4j\"              # Neo4J username\n",
-    "#password = os.environ['NEO4J_Password']           # Neo4J password\n",
-    "password = '26622002'\n",
+    "#Password defined at teh top of the notebook\n",
     "\n",
     "# Create a driver instance\n",
     "driver = GraphDatabase.driver(uri, auth=(username, password))\n",
@@ -1780,7 +1780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status_df = pd.read_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")"
+    "status_df = pd.read_csv(f\"{neo4j_directory}/import/nodes.csv\")"
    ]
   },
   {
@@ -3561,7 +3561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")"
+    "nodes_df.to_csv(f\"{neo4j_directory}/import/nodes.csv\")"
    ]
   },
   {
@@ -3592,7 +3592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relationship_df.to_csv(f\"{neo4j_path}/{neo4j_dbms}/import/relationships.csv\")"
+    "relationship_df.to_csv(f\"{neo4j_directory}/import/relationships.csv\")"
    ]
   },
   {
@@ -3759,11 +3759,11 @@
     "os_name = os.name\n",
     "\n",
     "if os_name == 'nt':\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}/bin'\n",
+    "    working_dir = f'{neo4j_directory}/bin'\n",
     "    command = 'neo4j-admin database import full --nodes=import/nodes.csv --relationships=import/relationships.csv --overwrite-destination neo4j'\n",
     "    result = subprocess.run(command, shell=True, cwd=working_dir, capture_output=True, text=True)\n",
     "else:\n",
-    "    working_dir = f'{neo4j_path}/{neo4j_dbms}'\n",
+    "    working_dir = f'{neo4j_directory}'\n",
     "    command = [\n",
     "    './bin/neo4j-admin', 'database', 'import', 'full',\n",
     "    '--nodes=import/nodes.csv',\n",
@@ -4125,7 +4125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status_df = pd.read_csv(f\"{neo4j_path}/{neo4j_dbms}/import/nodes.csv\")\n",
+    "status_df = pd.read_csv(f\"{neo4j_directory}/import/nodes.csv\")\n",
     "fast_graph_df = pd.merge(fastRP_df, status_df, left_on=\"SpecID\", right_on=\"SpecID:ID\", how=\"inner\")\n",
     "fast_graph_df.drop(columns=[\"SpecID:ID\"], inplace=True)"
    ]
