Enviroment variable for graph now work on linux

--- a/graph_database/graph_2_1_Vector_Spectra_Similar_Peaks.ipynb
+++ b/graph_database/graph_2_1_Vector_Spectra_Similar_Peaks.ipynb
@@ -32,8 +32,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "password = os.getenv('NEO4J_Password')\n",
-    "neo4j_directory = os.getenv('NEO4J_Directory')"
+    "os_name = os.name\n",
+    "\n",
+    "if os_name == 'nt':\n",
+    "    password = os.getenv('NEO4J_Password')\n",
+    "    neo4j_directory = os.getenv('NEO4J_Directory')\n",
+    "else:\n",
+    "    password = os.environ['NEO4J_Password']\n",
+    "    neo4j_directory = os.environ['NEO4J_Directory']"
    ]
   },
   {
