Database will restart after new import on linux

--- a/graph_database/graph_1_4_Peaks_GridSlot_SameSample.ipynb
+++ b/graph_database/graph_1_4_Peaks_GridSlot_SameSample.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,26 +1662,6 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'C:/Users/stang/.Neo4jDesktop/relate-data/dbmss/dbms-d0a05d27-d2ec-404f-a7c3-e7f4b6a97351/bin'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "working_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1708,23 +1688,20 @@
     }
    ],
    "source": [
-    "if os_name == 'nt':\n",
-    "    command = 'neo4j restart'\n",
-    "    result = subprocess.run(command, shell=True, cwd=working_dir, capture_output=True, text=True)\n",
-    "else:\n",
+    "if os_name != 'nt':\n",
     "    command = [\n",
     "        './bin/neo4j', 'restart'\n",
-    "        ]\n",
-    "    result = subprocess.run(command, cwd=working_dir, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "    ]\n",
     "\n",
-    "# Check if the command was successful\n",
-    "if result.returncode == 0:\n",
-    "    print(\"Restart successful\")\n",
-    "    print(result.stdout)\n",
-    "else:\n",
-    "    print(\"Error during restart:\")\n",
-    "    print(result.stderr)\n",
-    "    "
+    "    result = subprocess.run(command, cwd=neo4j_directory, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "\n",
+    "    # Check if the command was successful\n",
+    "    if result.returncode == 0:\n",
+    "        print(\"Restart successful\")\n",
+    "        print(result.stdout)\n",
+    "    else:\n",
+    "        print(\"Error during restart:\")\n",
+    "        print(result.stderr)"
    ]
   },
   {
