--- a/graph_database/graph_2_1_Vector_Spectra_Similar_Peaks.ipynb
+++ b/graph_database/graph_2_1_Vector_Spectra_Similar_Peaks.ipynb
@@ -1209,6 +1209,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os_name != 'nt':\n",
+    "    command = [\n",
+    "        './bin/neo4j', 'restart'\n",
+    "    ]\n",
+    "\n",
+    "    result = subprocess.run(command, cwd=neo4j_directory, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "\n",
+    "    # Check if the command was successful\n",
+    "    if result.returncode == 0:\n",
+    "        print(\"Restart successful\")\n",
+    "        print(result.stdout)\n",
+    "    else:\n",
+    "        print(\"Error during restart:\")\n",
+    "        print(result.stderr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
