--- a/GroupKFold_feature_engineering/Outlier_Proportion_Search.ipynb
+++ b/GroupKFold_feature_engineering/Outlier_Proportion_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,35 +17,44 @@
     "import numpy as np\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from Spectra_Preparation_Functions import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "spectra_df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
+    "df = spectra_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAbsorbance\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m spectra_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSpecID\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAbsorbance\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mtransform(\u001b[38;5;28;01mlambda\u001b[39;00m x: normalise(x))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "def normalise(absorbances):\n",
-    "    max_value = np.max(absorbances)\n",
-    "    normalized_absorbances = absorbances / max_value\n",
-    "    return normalized_absorbances\n",
-    "\n",
     "df['Absorbance'] = spectra_df.groupby('SpecID')['Absorbance'].transform(lambda x: normalise(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
