Added PCA Based Outlier Removal

--- a/GroupKFold_feature_engineering/Extra_Trees_Full_Bayesian_Search.ipynb
+++ b/GroupKFold_feature_engineering/Extra_Trees_Full_Bayesian_Search.ipynb
@@ -767,6 +767,7 @@
     "    # Values for each hyperparameter\n",
     "    despike = trial.suggest_categorical('despike', [True, False])\n",
     "    despike_ma = trial.suggest_int('despike_ma', 5, 100)\n",
+    "    despike_threshold = trial.suggest_float('despike_ma', 3, 10, step=0.25)\n",
     "    lam = trial.suggest_categorical('lam', [10**2, 10**3, 10**4, 10**5, 10**6, 10**7, 10**8, 10**9])\n",
     "    p = trial.suggest_float('p', 0.001, 0.1)\n",
     "    window_size = trial.suggest_int('window_size', 5, 201)\n",
@@ -777,7 +778,7 @@
     "\n",
     "    # Apply preprocessing based on suggested parameters\n",
     "    if despike:\n",
-    "        df_copy['Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x, ma=despike_ma))\n",
+    "        df_copy['Absorbance'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x, ma=despike_ma, threshold = despike_threshold))\n",
     "    df_copy['Baseline'] = df_copy.groupby('SpecID')['Absorbance'].transform(lambda x: asls_baseline_correction(x, lam=lam, p=p))\n",
     "    df_copy['Baseline_Corrected_Absorbance'] = df_copy['Absorbance'] - df_copy['Baseline']\n",
     "    df_copy['Smooth_Baseline_Corrected'] = df_copy.groupby('SpecID')['Baseline_Corrected_Absorbance'].transform(lambda x: savgol_filter(x, window_size, poly_order, deriv=0))\n",
