Added Optuna scripts that can be run in parralel

--- a/GroupKFold_feature_engineering/Extra_Trees_Full_Bayesian_Search.ipynb
+++ b/GroupKFold_feature_engineering/Extra_Trees_Full_Bayesian_Search.ipynb
@@ -767,11 +767,11 @@
     "    # Values for each hyperparameter\n",
     "    despike = trial.suggest_categorical('despike', [True, False])\n",
     "    despike_ma = trial.suggest_int('despike_ma', 5, 100)\n",
-    "    despike_threshold = trial.suggest_float('despike_ma', 3, 10, step=0.25)\n",
+    "    despike_threshold = trial.suggest_float('despike_threshold', 3, 10, step=0.25)\n",
     "    lam = trial.suggest_categorical('lam', [10**2, 10**3, 10**4, 10**5, 10**6, 10**7, 10**8, 10**9])\n",
-    "    p = trial.suggest_float('p', 0.001, 0.1)\n",
+    "    p = trial.suggest_float('p', 0.001, 0.1, step=0.001)\n",
     "    window_size = trial.suggest_int('window_size', 5, 201)\n",
-    "    poly_order = trial.suggest_categorical('poly_order', [1, 2, 3, 4])\n",
+    "    poly_order = trial.suggest_int('poly_order', 1, 4)\n",
     "    scaling = trial.suggest_categorical('scaling', [False, 'normal', 'vector', 'svn'])\n",
     "\n",
     "    df_copy = df.copy()\n",
@@ -801,8 +801,8 @@
     "    cv = GroupKFold(n_splits=10)\n",
     "\n",
     "    # Perform cross-validation\n",
-    "    scores = cross_validate(et, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
-    "    #scores = cross_val_score(et, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+    "    scores = cross_validate(et, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
+    "    #scores = cross_val_score(et, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
     "\n",
     "    # Return the average accuracy across all folds\n",
     "    return np.mean(scores['test_score'])\n",
@@ -812,9 +812,20 @@
     "# study = optuna.create_study(direction='maximise', sampler=sampler)\n",
     "\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
-    "study.optimize(objective, n_trials=100, n_jobs=-1)\n",
+    "# study.optimize(objective, n_trials=100, n_jobs=-1)\n",
+    "study.optimize(objective, n_trials=200, n_jobs=-1)\n",
     "\n",
     "print(study.best_trial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df = study.trials_dataframe(attrs=(\"number\", \"value\", \"params\", \"state\"))\n",
+    "results_df.to_csv(\"../../data/et_optuna.csv\")"
    ]
   },
   {
@@ -835,7 +846,7 @@
     "\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
     "\n",
-    "joblib.dump(study, \"../../data/studies/cleaning_study.pkl\")\n",
+    "joblib.dump(study, \"../../data/studies/cleaning_study2.pkl\")\n",
     "\n",
     "# loaded_study = joblib.load(\"../../data/studies/cleaning_study.pkl\")\n",
     "# print(\"Best trial until now:\")\n",
