--- a/GroupKFold_feature_engineering/Extra_Trees_Model_Params_Bayesian_Search.ipynb
+++ b/GroupKFold_feature_engineering/Extra_Trees_Model_Params_Bayesian_Search.ipynb
@@ -780,7 +780,6 @@
     "    groups = wavelength_copy['SurID']\n",
     "\n",
     "    # Classifier and cross-validation setup\n",
-    "    et = ExtraTreesClassifier(random_state=1234)\n",
     "    cv = GroupKFold(n_splits=10)\n",
     "\n",
     "    n_estimators = trial.suggest_int('n_estimators', 100, 2000)\n",
@@ -802,8 +801,8 @@
     "        random_state=1234\n",
     "    )\n",
     "    # Perform cross-validation\n",
-    "    #scores = cross_validate(et, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
-    "    scores = cross_val_score(et, X, y, groups=groups, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+    "    #scores = cross_validate(et, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
+    "    scores = cross_val_score(et, X, y, groups=groups, cv=cv, scoring='accuracy')\n",
     "\n",
     "    # Return the average accuracy across all folds\n",
     "    return np.mean(scores)\n",
@@ -862,18 +861,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-03-27 23:37:01,601] Trial 104 finished with value: 0.5389999999999999 and parameters: {'n_estimators': 1488, 'max_depth': 63, 'min_samples_split': 0.18321850794774946, 'min_samples_leaf': 0.010764867091873073, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:41:20,995] Trial 110 finished with value: 0.5662380952380952 and parameters: {'n_estimators': 1355, 'max_depth': 57, 'min_samples_split': 0.12047139009075215, 'min_samples_leaf': 0.015994116608584817, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:45:21,351] Trial 111 finished with value: 0.5244444444444445 and parameters: {'n_estimators': 1319, 'max_depth': 4, 'min_samples_split': 0.12657376317613242, 'min_samples_leaf': 0.018738285563519776, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:45:44,925] Trial 101 finished with value: 0.5662380952380952 and parameters: {'n_estimators': 1330, 'max_depth': 79, 'min_samples_split': 0.12326307664752156, 'min_samples_leaf': 0.011806606294745774, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:46:13,605] Trial 106 finished with value: 0.563952380952381 and parameters: {'n_estimators': 1433, 'max_depth': 65, 'min_samples_split': 0.1245704670875699, 'min_samples_leaf': 0.01836765345348368, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:50:28,976] Trial 100 finished with value: 0.5376825396825397 and parameters: {'n_estimators': 1507, 'max_depth': 61, 'min_samples_split': 0.18348202730087237, 'min_samples_leaf': 0.019727575149547677, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:51:47,977] Trial 107 finished with value: 0.5406349206349207 and parameters: {'n_estimators': 1378, 'max_depth': 61, 'min_samples_split': 0.17831725041382623, 'min_samples_leaf': 0.017975062481753, 'max_features': None, 'bootstrap': False}. Best is trial 30 with value: 0.5726031746031746.\n",
+      "[I 2024-03-27 23:52:04,942] Trial 105 finished with value: 0.5881904761904762 and parameters: {'n_estimators': 1431, 'max_depth': 59, 'min_samples_split': 0.04105569004723302, 'min_samples_leaf': 0.0237083373924984, 'max_features': None, 'bootstrap': False}. Best is trial 105 with value: 0.5881904761904762.\n"
+     ]
+    }
+   ],
    "source": [
-    "study.optimize(objective, n_trials=100, n_jobs=-1)\n",
+    "study.optimize(objective, n_trials=25, n_jobs=-1)\n",
     "\n",
     "print(study.best_trial)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2158,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5588,7 +5602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171283,7 +171297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171296,38 +171310,38 @@
         {
          "cliponaxis": false,
          "hovertemplate": [
-          "max_features (CategoricalDistribution): 0.041566565045984674<extra></extra>",
-          "n_estimators (IntDistribution): 0.044688528854792894<extra></extra>",
-          "max_depth (IntDistribution): 0.05294680375637215<extra></extra>",
-          "bootstrap (CategoricalDistribution): 0.064671853630103<extra></extra>",
-          "min_samples_split (FloatDistribution): 0.15577612604581817<extra></extra>",
-          "min_samples_leaf (FloatDistribution): 0.640350122666929<extra></extra>"
+          "max_features (CategoricalDistribution): 0.04162534220871905<extra></extra>",
+          "bootstrap (CategoricalDistribution): 0.044137858056285305<extra></extra>",
+          "max_depth (IntDistribution): 0.0642496976289391<extra></extra>",
+          "n_estimators (IntDistribution): 0.07106626101007826<extra></extra>",
+          "min_samples_split (FloatDistribution): 0.15612235077756306<extra></extra>",
+          "min_samples_leaf (FloatDistribution): 0.6227984903184152<extra></extra>"
          ],
          "name": "Objective Value",
          "orientation": "h",
          "text": [
           "0.04",
           "0.04",
-          "0.05",
           "0.06",
+          "0.07",
           "0.16",
-          "0.64"
+          "0.62"
          ],
          "textposition": "outside",
          "type": "bar",
          "x": [
-          0.041566565045984674,
-          0.044688528854792894,
-          0.05294680375637215,
-          0.064671853630103,
-          0.15577612604581817,
-          0.640350122666929
+          0.04162534220871905,
+          0.044137858056285305,
+          0.0642496976289391,
+          0.07106626101007826,
+          0.15612235077756306,
+          0.6227984903184152
          ],
          "y": [
           "max_features",
-          "n_estimators",
-          "max_depth",
           "bootstrap",
+          "max_depth",
+          "n_estimators",
           "min_samples_split",
           "min_samples_leaf"
          ]
