--- a/GroupKFold_feature_engineering/quick_evaluation.ipynb
+++ b/GroupKFold_feature_engineering/quick_evaluation.ipynb
@@ -1044,13 +1044,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
     "from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support"
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -1243,6 +1244,417 @@
    ],
    "source": [
     "df.groupby('Status')['SpecID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Finally Try to Predict the Surface by its predicted Spectra**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SpecID</th>\n",
+       "      <th>Seq</th>\n",
+       "      <th>WaveNumber</th>\n",
+       "      <th>Absorbance</th>\n",
+       "      <th>SurID</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>PageRank</th>\n",
+       "      <th>Baseline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4098</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>293</td>\n",
+       "      <td>400.22778</td>\n",
+       "      <td>0.017863</td>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>0.961147</td>\n",
+       "      <td>2041.552352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4099</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>294</td>\n",
+       "      <td>400.91116</td>\n",
+       "      <td>0.013682</td>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>0.961147</td>\n",
+       "      <td>2041.568641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4100</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>295</td>\n",
+       "      <td>401.59454</td>\n",
+       "      <td>0.013220</td>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>0.961147</td>\n",
+       "      <td>2041.584930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4101</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>296</td>\n",
+       "      <td>402.27789</td>\n",
+       "      <td>0.014904</td>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>0.961147</td>\n",
+       "      <td>2041.601219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4102</th>\n",
+       "      <td>201210-1-02</td>\n",
+       "      <td>297</td>\n",
+       "      <td>402.96127</td>\n",
+       "      <td>0.015908</td>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>0.961147</td>\n",
+       "      <td>2041.617508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239200</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2337</td>\n",
+       "      <td>1797.03870</td>\n",
+       "      <td>-0.016926</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>1.201164</td>\n",
+       "      <td>1753.639314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239201</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2338</td>\n",
+       "      <td>1797.72200</td>\n",
+       "      <td>-0.014938</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>1.201164</td>\n",
+       "      <td>1753.341720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239202</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2339</td>\n",
+       "      <td>1798.40550</td>\n",
+       "      <td>-0.014875</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>1.201164</td>\n",
+       "      <td>1753.044127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239203</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2340</td>\n",
+       "      <td>1799.08890</td>\n",
+       "      <td>-0.013774</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>1.201164</td>\n",
+       "      <td>1752.746533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239204</th>\n",
+       "      <td>210526-3-09</td>\n",
+       "      <td>2341</td>\n",
+       "      <td>1799.77220</td>\n",
+       "      <td>-0.016672</td>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>1.201164</td>\n",
+       "      <td>1752.448939</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3653367 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              SpecID   Seq  WaveNumber  Absorbance     SurID         Status  \\\n",
+       "4098     201210-1-02   293   400.22778    0.017863  201210-1         Normal   \n",
+       "4099     201210-1-02   294   400.91116    0.013682  201210-1         Normal   \n",
+       "4100     201210-1-02   295   401.59454    0.013220  201210-1         Normal   \n",
+       "4101     201210-1-02   296   402.27789    0.014904  201210-1         Normal   \n",
+       "4102     201210-1-02   297   402.96127    0.015908  201210-1         Normal   \n",
+       "...              ...   ...         ...         ...       ...            ...   \n",
+       "6239200  210526-3-09  2337  1797.03870   -0.016926  210526-3  Hyperglycemia   \n",
+       "6239201  210526-3-09  2338  1797.72200   -0.014938  210526-3  Hyperglycemia   \n",
+       "6239202  210526-3-09  2339  1798.40550   -0.014875  210526-3  Hyperglycemia   \n",
+       "6239203  210526-3-09  2340  1799.08890   -0.013774  210526-3  Hyperglycemia   \n",
+       "6239204  210526-3-09  2341  1799.77220   -0.016672  210526-3  Hyperglycemia   \n",
+       "\n",
+       "         PageRank     Baseline  \n",
+       "4098     0.961147  2041.552352  \n",
+       "4099     0.961147  2041.568641  \n",
+       "4100     0.961147  2041.584930  \n",
+       "4101     0.961147  2041.601219  \n",
+       "4102     0.961147  2041.617508  \n",
+       "...           ...          ...  \n",
+       "6239200  1.201164  1753.639314  \n",
+       "6239201  1.201164  1753.341720  \n",
+       "6239202  1.201164  1753.044127  \n",
+       "6239203  1.201164  1752.746533  \n",
+       "6239204  1.201164  1752.448939  \n",
+       "\n",
+       "[3653367 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_and_predict_surface_status(df):\n",
+    "   # Set the Surfaces as groups\n",
+    "    groups = df['SurID']\n",
+    "    X = df.drop(['Status', 'SurID'], axis=1)\n",
+    "    y = df['Status']\n",
+    "\n",
+    "    # Creating the RandomForestClassifier\n",
+    "    rf = RandomForestClassifier(random_state=1234, criterion='entropy', max_depth=23, n_estimators=78)\n",
+    "    \n",
+    "    # Using GroupKFold for classification tasks\n",
+    "    cv = GroupKFold(n_splits=10)\n",
+    "    \n",
+    "    # DataFrame to store the actual and predicted status for each spectrum\n",
+    "    predictions_df = pd.DataFrame(columns=['SurID', 'ActualStatus', 'PredictedStatus'])\n",
+    "\n",
+    "    # Iterating over each fold\n",
+    "    for train_index, test_index in cv.split(X, y, groups=groups):\n",
+    "        # Splitting the dataset into the current train and test set\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "        groups_test = groups.iloc[test_index]\n",
+    "        \n",
+    "        # Fitting the model on the training set\n",
+    "        rf.fit(X_train, y_train)\n",
+    "\n",
+    "        # Predicting the status for the test set\n",
+    "        y_pred = rf.predict(X_test)\n",
+    "\n",
+    "        # Appending the SurID, actual, and predicted status to the predictions DataFrame\n",
+    "        fold_predictions = pd.DataFrame({\n",
+    "            'SurID': groups_test.values,\n",
+    "            'ActualStatus': y_test.values,\n",
+    "            'PredictedStatus': y_pred\n",
+    "        })\n",
+    "        predictions_df = pd.concat([predictions_df, fold_predictions], ignore_index=True)\n",
+    "\n",
+    "    # Return the most common prediction of each spectra within the surface\n",
+    "    return predictions_df.groupby('SurID').agg(lambda x: x.mode()[0]).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SurID</th>\n",
+       "      <th>ActualStatus</th>\n",
+       "      <th>PredictedStatus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201210-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201210-2</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Hypoglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>210114-1</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>210114-2</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210120-1</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>210519-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>210524-1</td>\n",
+       "      <td>Hypoglycemia</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>210526-1</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>210526-2</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>210526-3</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "      <td>Hypoglycemia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SurID   ActualStatus PredictedStatus\n",
+       "0   201210-1         Normal          Normal\n",
+       "1   201210-2         Normal    Hypoglycemia\n",
+       "2   210114-1         Normal          Normal\n",
+       "3   210114-2         Normal          Normal\n",
+       "4   210120-1  Hyperglycemia          Normal\n",
+       "..       ...            ...             ...\n",
+       "58  210519-3  Hyperglycemia   Hyperglycemia\n",
+       "59  210524-1   Hypoglycemia   Hyperglycemia\n",
+       "60  210526-1  Hyperglycemia   Hyperglycemia\n",
+       "61  210526-2  Hyperglycemia          Normal\n",
+       "62  210526-3  Hyperglycemia    Hypoglycemia\n",
+       "\n",
+       "[63 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surface_predictions = evaluate_and_predict_surface_status(wavelength_df)\n",
+    "surface_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "Hyperglycemia       0.70      0.74      0.72        19\n",
+      " Hypoglycemia       0.72      0.82      0.77        22\n",
+      "       Normal       0.78      0.64      0.70        22\n",
+      "\n",
+      "     accuracy                           0.73        63\n",
+      "    macro avg       0.73      0.73      0.73        63\n",
+      " weighted avg       0.73      0.73      0.73        63\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(surface_predictions['ActualStatus'], surface_predictions['PredictedStatus']))"
    ]
   }
  ],
